--- a/reqs_extraction/reqs-to-testplan-grouped.ipynb
+++ b/reqs_extraction/reqs-to-testplan-grouped.ipynb
@@ -11,12 +11,11 @@
     "#### What it does\n",
     "\n",
     "- Processes each requirement from a markdown input file\n",
-    "- Generates comprehensive test specifications including:\n",
-    "  - Testability assessment (Automatic/Manual/Hybrid)\n",
+    "- Based on the IG capability statement, generates comprehensive test specifications including:\n",
+    "  - Testability assessment (Automatically testable/assertion/not testable) and level of complexity\n",
     "  - Implementation strategy with specific FHIR operations\n",
-    "  - Required test data and validation criteria\n",
-    "  - Implementable pseudocode\n",
-    "  - Edge cases and considerations\n",
+    "  - Required pre-reqs, inputs including required FHIR resources, and expected outputs\n",
+    "  - Validation criteria\n",
     "- Creates a single, well-structured markdown file with a table of contents\n",
     "\n",
     "#### How to use\n",
@@ -38,6 +37,7 @@
     "   **Source**: Original requirement sources\n",
     "   ---\n",
     "   ```\n",
+    "   And an IG capability statement file in markdown format.\n",
     "\n",
     "3. **Run**: Execute the `run_test_plan_generator()` function and follow the prompts:\n",
     "   - Select which LLM to use\n",
@@ -46,12 +46,19 @@
     "   - Specify the output directory, or use the default\n",
     "\n",
     "4. **Output**: A single markdown file will be generated with the format:\n",
-    "   `[ig_name]_[llm]_test_plan_[timestamp].md`"
+    "   `[llm]_test_plan_[timestamp].md`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notebook Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +71,7 @@
     "from pathlib import Path\n",
     "from typing import List, Dict, Any, Optional, Tuple\n",
     "from collections import defaultdict\n",
+    "import httpx\n",
     "\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
@@ -75,18 +83,7 @@
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO, \n",
     "                    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    "logger = logging.getLogger(__name__)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Constants\n",
-    "PROJECT_ROOT = Path.cwd().parent  # Go up one level to project root\n",
-    "OUTPUT_DIR = os.path.join(PROJECT_ROOT, '/reqs_extraction/test_plan_output')\n"
+    "logger = logging.getLogger(__name__)"
    ]
   },
   {
@@ -95,7 +92,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Constants\n",
+    "PROJECT_ROOT = Path.cwd().parent  # Go up one level to project root\n",
+    "OUTPUT_DIR = os.path.join(PROJECT_ROOT, '/reqs_extraction/test_plan_output')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### API Configuration & Prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# API Configuration\n",
     "API_CONFIGS = {\n",
     "    \"claude\": {\n",
@@ -138,6 +152,59 @@
     "SYSTEM_PROMPT = \"\"\"You are a specialized FHIR testing engineer with expertise in healthcare interoperability.\n",
     "Your task is to analyze FHIR Implementation Guide requirements and generate practical, implementable test specifications.\"\"\"\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup_clients():\n",
+    "    \"\"\"Initialize clients for each LLM service\"\"\"\n",
+    "    try:\n",
+    "        # Claude setup\n",
+    "        verify_path = '/opt/homebrew/etc/openssl@3/cert.pem'\n",
+    "        http_client = httpx.Client(\n",
+    "            verify=verify_path if os.path.exists(verify_path) else True,\n",
+    "            timeout=60.0\n",
+    "        )\n",
+    "        claude_client = Anthropic(\n",
+    "            api_key=os.getenv('ANTHROPIC_API_KEY'),\n",
+    "            http_client=http_client\n",
+    "        )\n",
+    "        \n",
+    "        # Gemini setup\n",
+    "        gemini_api_key = os.getenv('GEMINI_API_KEY')\n",
+    "        if not gemini_api_key:\n",
+    "            raise ValueError(\"GEMINI_API_KEY not found\")\n",
+    "        gemini.configure(api_key=gemini_api_key)\n",
+    "        gemini_client = gemini.GenerativeModel(\n",
+    "            model_name=API_CONFIGS[\"gemini\"][\"model\"],\n",
+    "            generation_config={\n",
+    "                \"max_output_tokens\": API_CONFIGS[\"gemini\"][\"max_tokens\"],\n",
+    "                \"temperature\": API_CONFIGS[\"gemini\"][\"temperature\"]\n",
+    "            }\n",
+    "        )\n",
+    "        \n",
+    "        # OpenAI setup\n",
+    "        openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "        if not openai_api_key:\n",
+    "            raise ValueError(\"OPENAI_API_KEY not found\")\n",
+    "        openai_client = OpenAI(\n",
+    "            api_key=openai_api_key,\n",
+    "            timeout=60.0\n",
+    "        )\n",
+    "        \n",
+    "        return {\n",
+    "            \"claude\": claude_client,\n",
+    "            \"gpt\": openai_client,\n",
+    "            \"gemini\": gemini_client\n",
+    "        }\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error setting up clients: {str(e)}\")\n",
+    "        raise"
    ]
   },
   {
@@ -195,6 +262,13 @@
     "\n",
     "Return only the category name that best represents this requirement's grouping, with no additional text or explanation.\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rate Limiting"
    ]
   },
   {
@@ -256,50 +330,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def setup_clients():\n",
-    "    \"\"\"Initialize clients for each LLM service\"\"\"\n",
-    "    try:\n",
-    "        # Claude setup\n",
-    "        claude_client = Anthropic(\n",
-    "            api_key=os.getenv('ANTHROPIC_API_KEY'),\n",
-    "        )\n",
-    "        \n",
-    "        # Gemini setup\n",
-    "        gemini_api_key = os.getenv('GEMINI_API_KEY')\n",
-    "        if not gemini_api_key:\n",
-    "            raise ValueError(\"GEMINI_API_KEY not found\")\n",
-    "        gemini.configure(api_key=gemini_api_key)\n",
-    "        gemini_client = gemini.GenerativeModel(\n",
-    "            model_name=API_CONFIGS[\"gemini\"][\"model\"],\n",
-    "            generation_config={\n",
-    "                \"max_output_tokens\": API_CONFIGS[\"gemini\"][\"max_tokens\"],\n",
-    "                \"temperature\": API_CONFIGS[\"gemini\"][\"temperature\"]\n",
-    "            }\n",
-    "        )\n",
-    "        \n",
-    "        # OpenAI setup\n",
-    "        openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "        if not openai_api_key:\n",
-    "            raise ValueError(\"OPENAI_API_KEY not found\")\n",
-    "        openai_client = OpenAI(\n",
-    "            api_key=openai_api_key,\n",
-    "            timeout=60.0\n",
-    "        )\n",
-    "        \n",
-    "        return {\n",
-    "            \"claude\": claude_client,\n",
-    "            \"gpt\": openai_client,\n",
-    "            \"gemini\": gemini_client\n",
-    "        }\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        logging.error(f\"Error setting up clients: {str(e)}\")\n",
-    "        raise"
+    "### Capability Statement Processing"
    ]
   },
   {
@@ -510,6 +544,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Requirements Processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -587,6 +628,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def identify_requirement_group(\n",
+    "    client, \n",
+    "    api_type: str,\n",
+    "    requirement: Dict[str, str],\n",
+    "    rate_limit_func\n",
+    ") -> str:\n",
+    "    \"\"\"\n",
+    "    Identify the appropriate group for a requirement using LLM\n",
+    "    \n",
+    "    Args:\n",
+    "        client: The API client\n",
+    "        api_type: API type (claude, gemini, gpt)\n",
+    "        requirement: Requirement dictionary\n",
+    "        rate_limit_func: Function to check rate limits\n",
+    "        \n",
+    "    Returns:\n",
+    "        Identified group name\n",
+    "    \"\"\"\n",
+    "    # Use actor field as a possible hint if available\n",
+    "    actor = requirement.get('actor', '').strip()\n",
+    "    if actor and len(actor) > 3 and actor not in ['System', 'User', 'All']:\n",
+    "        # Simple heuristic - if actor is specific enough, it might be a good grouping\n",
+    "        possible_groups = ['Client', 'Server', 'Patient', 'Practitioner', 'Organization', 'HealthcareService']\n",
+    "        for group in possible_groups:\n",
+    "            if group.lower() in actor.lower():\n",
+    "                return group\n",
+    "    \n",
+    "    # Use LLM to identify group\n",
+    "    logger.info(f\"Identifying group for requirement {requirement.get('id', 'unknown')} using {api_type}...\")\n",
+    "    \n",
+    "    # Format requirement as markdown\n",
+    "    formatted_req = format_requirement_for_prompt(requirement)\n",
+    "    \n",
+    "    # Create prompt with the requirement\n",
+    "    prompt = REQUIREMENT_GROUPING_PROMPT.format(requirement=formatted_req)\n",
+    "    \n",
+    "    # Make the API request with simplified system prompt\n",
+    "    group_system_prompt = \"You are a FHIR expert who categorizes requirements by their functional or resource type.\"\n",
+    "    group_name = make_llm_request(client, api_type, prompt, group_system_prompt, rate_limit_func).strip()\n",
+    "    \n",
+    "    # Clean up response (in case model returns extra text)\n",
+    "    if '\\n' in group_name:\n",
+    "        group_name = group_name.split('\\n')[0].strip()\n",
+    "    \n",
+    "    return group_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### API Call"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -648,56 +749,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def identify_requirement_group(\n",
-    "    client, \n",
-    "    api_type: str,\n",
-    "    requirement: Dict[str, str],\n",
-    "    rate_limit_func\n",
-    ") -> str:\n",
-    "    \"\"\"\n",
-    "    Identify the appropriate group for a requirement using LLM\n",
-    "    \n",
-    "    Args:\n",
-    "        client: The API client\n",
-    "        api_type: API type (claude, gemini, gpt)\n",
-    "        requirement: Requirement dictionary\n",
-    "        rate_limit_func: Function to check rate limits\n",
-    "        \n",
-    "    Returns:\n",
-    "        Identified group name\n",
-    "    \"\"\"\n",
-    "    # Use actor field as a possible hint if available\n",
-    "    actor = requirement.get('actor', '').strip()\n",
-    "    if actor and len(actor) > 3 and actor not in ['System', 'User', 'All']:\n",
-    "        # Simple heuristic - if actor is specific enough, it might be a good grouping\n",
-    "        possible_groups = ['Client', 'Server', 'Patient', 'Practitioner', 'Organization', 'HealthcareService']\n",
-    "        for group in possible_groups:\n",
-    "            if group.lower() in actor.lower():\n",
-    "                return group\n",
-    "    \n",
-    "    # Use LLM to identify group\n",
-    "    logger.info(f\"Identifying group for requirement {requirement.get('id', 'unknown')} using {api_type}...\")\n",
-    "    \n",
-    "    # Format requirement as markdown\n",
-    "    formatted_req = format_requirement_for_prompt(requirement)\n",
-    "    \n",
-    "    # Create prompt with the requirement\n",
-    "    prompt = REQUIREMENT_GROUPING_PROMPT.format(requirement=formatted_req)\n",
-    "    \n",
-    "    # Make the API request with simplified system prompt\n",
-    "    group_system_prompt = \"You are a FHIR expert who categorizes requirements by their functional or resource type.\"\n",
-    "    group_name = make_llm_request(client, api_type, prompt, group_system_prompt, rate_limit_func).strip()\n",
-    "    \n",
-    "    # Clean up response (in case model returns extra text)\n",
-    "    if '\\n' in group_name:\n",
-    "        group_name = group_name.split('\\n')[0].strip()\n",
-    "    \n",
-    "    return group_name"
+    "### Test Plan Generation"
    ]
   },
   {
@@ -746,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +874,7 @@
     "        # Output file\n",
     "        test_plan_path = os.path.join(\n",
     "            output_dir, \n",
-    "            f\"{ig_name.lower().replace(' ', '_')}_{api_type}_test_plan_{timestamp}.md\"\n",
+    "            f\"{api_type}_test_plan_{timestamp}.md\"\n",
     "        )\n",
     "        \n",
     "        # Initialize test plan content\n",
@@ -892,6 +947,13 @@
     "    except Exception as e:\n",
     "        logger.error(f\"Error processing requirements: {str(e)}\")\n",
     "        raise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Main Execution Function"
    ]
   },
   {
@@ -979,8 +1041,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notebook Execution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1190,7 @@
     }
    ],
    "source": [
-    "# Run the generator when executed in a notebook cell\n",
+    "# Run the generator\n",
     "if __name__ == \"__main__\":\n",
     "    run_test_plan_generator()"
    ]
