--- a/reqs_extraction/reqs_reviewer.ipynb
+++ b/reqs_extraction/reqs_reviewer.ipynb
@@ -23,7 +23,7 @@
     "   - Or process directly: `result = refine_requirements(\"path/to/requirements.md\", \"claude\")`\n",
     "3. Import the module to another notebook: `from refine_requirements import refine_requirements, run_refinement`\n",
     "4. Direct notebook to filepath of requirements list of interest\n",
-    "5. The refined requirements will be saved to `revised_reqs/refined_requirements_{api}_{timestamp}.md`\n",
+    "5. The refined requirements will be saved to `revised_reqs/{api}_reqs_list_v2_{timestamp}.md`\n",
     "\n",
     "Notes:\n",
     "- Supports Claude, Gemini, or GPT-4\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
     "        \n",
     "        # Generate output filename\n",
     "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "        output_filename = f\"refined_requirements_{api_type}_{timestamp}.md\"\n",
+    "        output_filename = f\"{api_type}_reqs_list_v2{timestamp}.md\"\n",
     "        output_file_path = OUTPUT_DIR / output_filename\n",
     "        \n",
     "        # Save refined requirements\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -504,8 +504,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-02 14:58:00,755 - __main__ - INFO - Starting requirements refinement with gemini\n",
-      "2025-04-02 14:58:00,784 - __main__ - INFO - Sending requirements to gemini for refinement...\n"
+      "2025-04-15 11:03:24,777 - __main__ - INFO - Starting requirements refinement with claude\n",
+      "2025-04-15 11:03:24,810 - __main__ - INFO - Sending requirements to claude for refinement...\n"
      ]
     },
     {
@@ -513,27 +513,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing requirements with Gemini...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-02 14:58:27,474 - __main__ - INFO - Requirements refinement complete. Output saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/refined_requirements_gemini_20250402_145827.md\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "================================================================================\n",
-      "Requirements Refinement Complete!\n",
-      "Input file: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/processed_output/plan_net_gemini_20250402_145733.md\n",
-      "Refined requirements saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/refined_requirements_gemini_20250402_145827.md\n",
-      "API used: gemini\n",
-      "================================================================================\n"
+      "Processing requirements with Claude...\n"
      ]
     }
    ],
