--- a/test_kit_dev/reqs-to-testplan-grouped-3.ipynb
+++ b/test_kit_dev/reqs-to-testplan-grouped-3.ipynb
@@ -11,12 +11,11 @@
     "#### What it does\n",
     "\n",
     "- Processes each requirement from a markdown input file\n",
-    "- Generates comprehensive test specifications including:\n",
-    "  - Testability assessment (Automatic/Manual/Hybrid)\n",
+    "- Based on the IG capability statement, generates comprehensive test specifications including:\n",
+    "  - Testability assessment (Automatically testable/assertion/not testable) and level of complexity\n",
     "  - Implementation strategy with specific FHIR operations\n",
-    "  - Required test data and validation criteria\n",
-    "  - Implementable pseudocode\n",
-    "  - Edge cases and considerations\n",
+    "  - Required pre-reqs, inputs including required FHIR resources, and expected outputs\n",
+    "  - Validation criteria\n",
     "- Creates a single, well-structured markdown file with a table of contents\n",
     "\n",
     "#### How to use\n",
@@ -38,6 +37,7 @@
     "   **Source**: Original requirement sources\n",
     "   ---\n",
     "   ```\n",
+    "   And an IG capability statement file in markdown format.\n",
     "\n",
     "3. **Run**: Execute the `run_test_plan_generator()` function and follow the prompts:\n",
     "   - Select which LLM to use\n",
@@ -46,12 +46,12 @@
     "   - Specify the output directory, or use the default\n",
     "\n",
     "4. **Output**: A single markdown file will be generated with the format:\n",
-    "   `[ig_name]_[llm]_test_plan_[timestamp].md`"
+    "   `[llm]_test_plan_[timestamp].md`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,7 @@
     "import google.generativeai as gemini\n",
     "from openai import OpenAI\n",
     "from tenacity import retry, wait_exponential, stop_after_attempt, retry_if_exception_type\n",
+    "import httpx\n",
     "\n",
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO, \n",
@@ -80,9 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Constants\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m PROJECT_ROOT = \u001b[43mPath\u001b[49m.cwd().parent  \u001b[38;5;66;03m# Go up one level to project root\u001b[39;00m\n\u001b[32m      3\u001b[39m OUTPUT_DIR = os.path.join(PROJECT_ROOT, \u001b[33m'\u001b[39m\u001b[33m/reqs_extraction/test_plan_output\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'Path' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Constants\n",
     "PROJECT_ROOT = Path.cwd().parent  # Go up one level to project root\n",
@@ -91,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,8 +278,14 @@
     "    \"\"\"Initialize clients for each LLM service\"\"\"\n",
     "    try:\n",
     "        # Claude setup\n",
+    "        verify_path = '/opt/homebrew/etc/openssl@3/cert.pem'\n",
+    "        http_client = httpx.Client(\n",
+    "            verify=verify_path if os.path.exists(verify_path) else True,\n",
+    "            timeout=60.0\n",
+    "        )\n",
     "        claude_client = Anthropic(\n",
     "            api_key=os.getenv('ANTHROPIC_API_KEY'),\n",
+    "            http_client=http_client\n",
     "        )\n",
     "        \n",
     "        # Gemini setup\n",
@@ -304,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +838,7 @@
     "        # Output file\n",
     "        test_plan_path = os.path.join(\n",
     "            output_dir, \n",
-    "            f\"{ig_name.lower().replace(' ', '_')}_{api_type}_test_plan_{timestamp}.md\"\n",
+    "            f\"{api_type}_test_plan_{timestamp}.md\"\n",
     "        )\n",
     "        \n",
     "        # Initialize test plan content\n",
@@ -896,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
